Add tmux keybind settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,3 +12,33 @@ set -s escape-time 1
 # Set the base index for windows and panes to 1 instead of 0
 set -g base-index 1
 setw -g pane-base-index 1
+
+################################################################################
+# Keybind settings                                                             #
+################################################################################
+
+# Send C-t to apps on tmux with C-t twice
+bind C-t send-prefix
+
+# Reload the config file with Prefix + r
+bind r source-file ~/.tmux.conf \; display 'Config reloaded!'
+
+# Split panes with Prefix + | or -
+bind | split-window -h
+bind - split-window -v
+
+# Move between panes with vi keybinds
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Move between windows with only one prefix
+bind -r n select-window -t :+
+bind -r p select-window -t :-
+
+# Resize a pane with vi keybinds
+bind -r H resize-pane -L 3
+bind -r J resize-pane -D 3
+bind -r K resize-pane -U 3
+bind -r L resize-pane -R 3
