--- a/tmux.conf
+++ b/tmux.conf
@@ -42,3 +42,10 @@ bind -r H resize-pane -L 3
 bind -r J resize-pane -D 3
 bind -r K resize-pane -U 3
 bind -r L resize-pane -R 3
+
+################################################################################
+# Mouse settings                                                               #
+################################################################################
+
+# Enable mouse support
+set -g mouse on
