Use 256 colors on tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,9 @@ set -s escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Use 256 colors
+set -g default-terminal 'screen-256color'
+
 ################################################################################
 # Keybind settings                                                             #
 ################################################################################
