Add tmux status bar settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,3 +52,32 @@ bind -r L resize-pane -R 3
 
 # Enable mouse support
 set -g mouse on
+
+################################################################################
+# Status bar settings                                                          #
+################################################################################
+
+# Show alerts when the other windows has some activity
+setw -g monitor-activity on
+set -g visual-activity on
+
+# Set the status line's colors
+set -g status-fg white
+set -g status-bg black
+
+# Show session name, window and pane index on left side
+set -g status-left-length 40
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+
+# Center the window list
+set -g status-justify centre
+
+# Set the color of the window list
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+setw -g window-status-attr dim
+
+# Highlight the active window
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
