--- a/tmux.conf
+++ b/tmux.conf
@@ -81,3 +81,10 @@ setw -g window-status-attr dim
 setw -g window-status-current-fg white
 setw -g window-status-current-bg red
 setw -g window-status-current-attr bright
+
+################################################################################
+# Copy mode settings                                                           #
+################################################################################
+
+# Move in copy mode with vi keybinds
+setw -g mode-keys vi
