Install and configure tpm
$ git clone https://github.com/tmux-plugins/tpm tmux/plugins/tpm

--- a/tmux.conf
+++ b/tmux.conf
@@ -88,3 +88,10 @@ setw -g window-status-current-attr bright
 
 # Move in copy mode with vi keybinds
 setw -g mode-keys vi
+
+################################################################################
+# Plugin settings                                                              #
+################################################################################
+
+# Initialize plugin manager (keep this line at the very bottom of config file)
+run '~/.tmux/plugins/tpm/tpm'
