Install tmux-copycat into tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -92,6 +92,7 @@ setw -g mode-keys vi
 ################################################################################
 # Plugin settings                                                              #
 ################################################################################
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Initialize plugin manager (keep this line at the very bottom of config file)
 run '~/.tmux/plugins/tpm/tpm'
