--- a/tmux.conf
+++ b/tmux.conf
@@ -46,6 +46,12 @@ bind -r J resize-pane -D 3
 bind -r K resize-pane -U 3
 bind -r L resize-pane -R 3
 
+# Expand and contract a pane
+unbind Up
+unbind Down
+bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+
 ################################################################################
 # Mouse settings                                                               #
 ################################################################################
